fix(horizontal-menu): Include borders to expand size calculations & update submenu overflow

--- a/packages/wix-ui-core/src/components/horizontal-menu/horizontal-menu-item/HorizontalMenuItem.st.css
+++ b/packages/wix-ui-core/src/components/horizontal-menu/horizontal-menu-item/HorizontalMenuItem.st.css
@@ -21,9 +21,7 @@
   position: relative;
 }
 
-.menuItemLink {
-  cursor: pointer;
-}
+.menuItemLink {}
 
 .expandIcon {
   display: inline-block;
